# Starfire-Dashboard

./: .readthedocs.yml  setup.cfg
docs/: conf.py  index.rst  third_parties.rst
documents/: Cookie Policy.md  Privacy Policy.md  Third Parties Disclaimer.md
reddash/: __init__.py  __main__.py
reddash/app/: app.py  tasks_manager.py  utils.py
reddash/app/base/: __init__.py
reddash/app/login/: __init__.py  routes.py
reddash/app/templates/errors/: 500.html
reddash/app/templates/includes/: footer.html
reddash/app/templates/pages/: credits.html
reddash/app/templates/pages/login/: login.html
reddash/app/templates/pages/third_parties/: oauth.html
reddash/app/third_parties/: __init__.py
