[metadata]
name = Starfire Dashboard
version = attr: reddash.__version__
description = An easy-to-use interactive web Dashboard to control your Starfire!
license = AGPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Star
url = https://github.com/LeDeathAmongst/Dashboard
project_urls =
    Donate on Ko-Fi = https://www.ko-fi.com/starcogs
    Source Code = https://github.com/LeDeathAmongst/Dashboard
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System

[options]
packages =
    find:
python_requires = >=3.8.1
install_requires =
    flask[async]
    waitress
    websocket-client
    Flask-Babel
    pygments
    PyJWT
    flask-login
    flask_wtf
    WTForms
    python-Levenshtein
    fernet
    rich
    rapidfuzz
    fuzzywuzzy
    aiohttp
    django-user-agents
    Flask-Bootstrap
    markdown
    bleach
    flask-moment
    flask-talisman
    flask-sitemapper

include_package_data = True

[options.extras_require]
style =
    black==19.10b0
docs =
    Sphinx==4.4.0
    sphinx-rtd-theme==1.0.0
    sphinx-prompt==1.5.0

[options.entry_points]
console_scripts = 
    reddash = reddash.__main__:main

[options.packages.find]
include =
    reddash
    reddash.*
